--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             </div>
         </div>
         <div id="subscribe">
+            <h5>(forgot to mention)</h5>
+            <h3>subscribe to my youtube channel <i class="ri-arrow-right-up-line"></i></h3>
+        </div>
+        <div id="footer">
             
         </div>
     </div>
