--- a/index.html
+++ b/index.html
@@ -20,15 +20,26 @@
                 <h4>MENU+</h4>
             </div>
             <div id="heading">
-                <h1>Product</h1>
+                <div class="bounding">
+                    <h1 class="boundingelem">Product</h1>
+                </div>
                 <div class="blocktext">
-                    <h1 id="secondh1">Designer</h1>
-                    <h5>Based in Indonesia</h5>
+                    <div class="bounding">
+                        <h1 class="boundingelem" id="secondh1">Designer</h1>
+                    </div>
+                    <div class="bounding">
+                        <h5 class="boundingelem">Based in Indonesia</h5>
+                    </div>
                 </div>
             </div>
             <div id="smallheadings">
-                <h5>Available for freelance</h5>
-                <h5>Work from may 24'</h5>
+                <div class="bounding">
+                    <h5 class="boundingelem">Available for freelance</h5>
+                </div>
+                <div class="bounding">
+                    <h5 class="boundingelem">Work from may 24'</h5>
+                </div>
+                
             </div>
             <div id="hfooter">
                 <a href="#">Previously worked at Toronto <i class="ri-arrow-right-up-line"></i> </a>
@@ -78,7 +89,7 @@
             </div>
         </div>
     </div>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
     <script src="script.js"></script>
