--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EraElegance</title>
     <link rel="stylesheet" href="loco.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -16,7 +16,7 @@
     <div id="main">
         <div id="hero">
             <div id="nav">
-                <a href="#">Aditya Patil</a>
+                <a href="#">Cynthia Augwu</a>
                 <h4>MENU+</h4>
             </div>
             <div id="heading">
